Hexen II: Hammer of Thyrion

Development Progress	:
---------------------------

2013-02-04 (SVN):
    * libs, timidity/readmidi.c: use safe_free() in read_meta_data(). no
      need for an early return in free_midi_list(). return NULL instead
      of newlist at the end of read_midi_event(), because the whole body
      of the function is a for(;;) loop to begin with.

2013-02-04 (SVN):
    * libs, timidity/resample.c (pre_resample): do not proceed if memory
      alloctation fails.

2013-02-04 (SVN):
    * libs, timidity: change timidity initialization so that a failure,
      such as config parse failures, shall also warrant a full shutdown
      of the library which frees all memory.
    * engine, snd_timidity.c: change the codec initialization routines
      now that mid_init() errors guarantee an associated mid_exit() from
      within the library itself.

2013-02-04 (SVN):
    * libs, timidity: added safe_free() as a new macro which expands to
      either simply free(), or to free() with additional NULL check of
      its argument when "CANT_FREE_NULL" preprocessor macro is defined.
      CANT_FREE_NULL can be defined through the makefile for any such
      standarts incompliant platforms (if there are still any such in
      existence) where freeing a NULL pointer crashes or something.

2013-02-04 (SVN):
    * host_cmd.c (Host_Class_f): add a big FIXME note to the lame fifth
      class check against h2mp-style progs. bounds-check cl_playerclass
      before using its value as an index for the ClassNames array.

2013-02-04 (SVN):
    * menu.c: remove dead code which referenced non-existing art. coding
      style tidy-up.
    * d_init.c, gl_screen.c, screen.c: coding style tidy-up.

2013-02-03 (SVN):
    * sbar.c: remove dead code which referenced non-existing art. coding
      style tidy-up.
    * update the release notes file for the new no-hud thing.

2013-02-03 (SVN):
    * Make viewsize > 120 mean "no HUD" (more or less). Based on an idea